--- a/HotelRent/templates/profile.html
+++ b/HotelRent/templates/profile.html
@@ -4,6 +4,12 @@
 
 {% block content %}
 
+{% if message %}
+    <div class="text-danger">{{ message }}</div>
+{% endif %}
+
+<br />
+
 <div class="container">
     <div class="row">
       <div class="col-4">
