--- a/HotelRent/templates/create-hotel.html
+++ b/HotelRent/templates/create-hotel.html
@@ -14,6 +14,7 @@
     {{ form.image }}<br /><br />
     {{ form.price }}<br /><br />
     {{ form.media }}{{ form.description }}<br /><br />
+    {{ form.author.as_hidden }}
     {{ form.category }}<br /><br />
     {{ form.facilities }}<br /><br />
     {{ form.state }}<br /><br />
